--- a/.env
+++ b/.env
@@ -23,10 +23,8 @@ APP_SECRET=4a80b4b7d429f7ef330b61d8ab8727d4
 # Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
-# DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-# DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8&charset=utf8mb4"
-DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=15&charset=utf8"
 ###< doctrine/doctrine-bundle ###
+DATABASE_URL='mysql://root:@10.1.165.145:3306/fruit-test?serverVersion=8&charset=utf8mb4'
 
 ###> symfony/messenger ###
 # Choose one of the transports below
